Fix grid alignment

--- a/index.css
+++ b/index.css
@@ -19,7 +19,14 @@
 	text-align: left;
 	border: 1px #666 solid;
 	border-radius: 10px;
+}
+
+#main .row .col-md {
 	margin: 0 1rem 1rem 1rem;
+}
+
+#main .row .filler-pls-ignore {
+	padding: 1rem;
 }
 
 #main .row .project.done {
